--- a/src/index.html
+++ b/src/index.html
@@ -2,50 +2,52 @@
 <html dir="ltr" lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>PWA Toolkit</title>
+	<meta charset="utf-8">
+	<title>PWA Toolkit</title>
 
-  <meta name="viewport"
-    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description"
-    content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
-  <meta name="theme-color" content="#16161d">
+	<meta name="viewport"
+		content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="description"
+		content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
+	<meta name="theme-color" content="#16161d">
 
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="msapplication-tap-highlight" content="no">
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Ionic PWA">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Ionic PWA">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <meta http-equiv="x-ua-compatible" content="IE=Edge">
+	<meta http-equiv="x-ua-compatible" content="IE=Edge">
 
-  <script type="module" src="/build/app.esm.js"></script>
-  <script nomodule src="/build/app.js"></script>
+	<script type="module" src="/build/app.esm.js"></script>
+	<script nomodule src="/build/app.js"></script>
 
-  <link href="/build/app.css" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
-  <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
-  <link rel="manifest" href="/manifest.json">
+	<link href="/build/app.css" rel="stylesheet">
+	<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
+	<link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
+	<link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
 
-  <app-root></app-root>
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<!-- <script src="/__/firebase/8.4.2/firebase-app.js"></script> -->
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/8.2.7/firebase-app.js"></script>
-
-  <!-- Add SDKs for Firebase products that you want to use
+	<!-- Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="/__/firebase/8.2.7/firebase-analytics.js"></script>
-  <script src="/__/firebase/8.2.7/firebase-auth.js"></script>
-  <script src="/__/firebase/8.2.7/firebase-firestore.js"></script>
-  <script src="/__/firebase/8.2.7/firebase-functions.js"></script>
-  <script src="/__/firebase/8.2.7/firebase-storage.js"></script>
+	<!-- <script src="/__/firebase/8.4.2/firebase-auth.js"></script>
+  <script src="/__/firebase/8.4.2/firebase-firestore.js"></script>
+  <script src="/__/firebase/8.4.2/firebase-functions.js"></script>
+  <script src="/__/firebase/8.4.2/firebase-storage.js"></script> -->
 
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+	<!-- Initialize Firebase -->
+	<!-- <script src="/__/firebase/init.js?useEmulator=true"></script> -->
+
+	<app-root></app-root>
+  	<div id="firebaseui-auth-container"></div>
+  	<div id="loader">Loading...</div>
+
 </body>
 
 </html>
